--- a/src/LexiCore.API/appsettings.json
+++ b/src/LexiCore.API/appsettings.json
@@ -5,6 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "cambia-esta-clave-super-secreta",
+    "Issuer": "lexicore",
+    "Audience": "LexiCore.Clientes"
+  },
+  "Email": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "User": "tu-correo@dominio.com",
+    "Password": "tu-pass-o-app-password",
+    "From": "LexiCore <tu-correo@dominio.com>",
+    "UseStartTls": true
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MySQLConnection": "server=localhost;port=3306;database=lexico;user=root;password=1234;Persist Security Info=False;SslMode=none"
