--- a/src/LexiCore.Application/LexiCore.Application.csproj
+++ b/src/LexiCore.Application/LexiCore.Application.csproj
@@ -1,19 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <ItemGroup>
-    <ProjectReference Include="..\ProyectoAnalisisLexico.Domain\ProyectoAnalisisLexico.Domain.csproj" />
-    <ProjectReference Include="..\ProyectoAnalisisLexico.Shared\ProyectoAnalisisLexico.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="QuestPDF" Version="2025.7.1" />
-  </ItemGroup>
-
   <PropertyGroup>
-    <TargetFramework>$(TargetFramework)</TargetFramework>
+    <!-- TargetFramework heredado via Directory.Build.props -->
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <!-- Sin Version porque ya lo fija Directory.Packages.props -->
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt">
+      <Version>8.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="BCrypt.Net-Next" />
+    <PackageReference Include="MimeKit">
+      <Version>4.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="MailKit">
+      <Version>4.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="QRCoder">
+      <Version>1.6.0</Version>
+    </PackageReference>
+    <PackageReference Include="QuestPDF">
+      <Version>2025.7.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore">
+      <Version>8.0.10</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational">
+      <Version>8.0.10</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LexiCore.Domain\LexiCore.Domain.csproj" />
+    <ProjectReference Include="..\LexiCore.Shared\LexiCore.Shared.csproj" />
+    <ProjectReference Include="..\LexiCore.Infrastructure\LexiCore.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
