--- a/src/LexiCore.Domain/LexiCore.Domain.csproj
+++ b/src/LexiCore.Domain/LexiCore.Domain.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>$(TargetFramework)</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <!-- TargetFramework heredado de Directory.Build.props (net8.0) -->
+    <RootNamespace>LexiCore.Domain</RootNamespace>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <!-- Necesario para los atributos [Index] en las entidades -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore" PrivateAssets="all">
+      <Version>8.0.10</Version>
+    </PackageReference>
+  </ItemGroup>
 </Project>
