--- a/src/LexiCore.Shared/LexiCore.Shared.csproj
+++ b/src/LexiCore.Shared/LexiCore.Shared.csproj
@@ -1,14 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>$(TargetFramework)</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>LexiCore.Shared</RootNamespace>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration"/>
+    <PackageReference Include="Microsoft.Extensions.Logging" />
   </ItemGroup>
-
 </Project>
