--- a/tests/LexiCore.UnitTests/LexiCore.UnitTests.csproj
+++ b/tests/LexiCore.UnitTests/LexiCore.UnitTests.csproj
@@ -1,17 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <!-- TargetFramework heredado desde Directory.Build.props -->
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="xunit" Version="2.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="xunit"  />
+    <PackageReference Include="xunit.runner.visualstudio" />
+    <!-- (Opcional) assertions más cómodas -->
+    <!-- <PackageReference Include="FluentAssertions" Version="6.12.0" /> -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,7 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProyectoAnalisisLexico.Application\ProyectoAnalisisLexico.Application.csproj" />
+    <!-- ANTES: ..\ProyectoAnalisisLexico.Application\... -->
+    <ProjectReference Include="..\..\src\LexiCore.Application\LexiCore.Application.csproj" />
+    <ProjectReference Include="..\..\src\LexiCore.Infrastructure\LexiCore.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\LexiCore.Domain\LexiCore.Domain.csproj" />
   </ItemGroup>
 
 </Project>
