Infra estable: EF MySQL funcionando, mapeos coexistentes R/C, upload+analysis OK

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,5 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <!-- Activa el modo de Versionado Central -->
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
 </Project>
