--- a/src/LexiCore.API/LexiCore.API.csproj
+++ b/src/LexiCore.API/LexiCore.API.csproj
@@ -1,9 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <!-- Hereda net8.0 desde Directory.Build.props -->
     <RootNamespace>LexiCore.API</RootNamespace>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,25 +8,22 @@
     <ProjectReference Include="..\LexiCore.Infrastructure\LexiCore.Infrastructure.csproj" />
     <ProjectReference Include="..\LexiCore.Shared\LexiCore.Shared.csproj" />
   </ItemGroup>
-  <ItemGroup>
-  <Compile Remove="Program_se.cs" />
-  <None Include="Program_se.cs" />
-</ItemGroup>
-
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer">
-      <Version>8.0.10</Version>
-    </PackageReference>
+    <Compile Remove="Program_se.cs" />
+    <None Include="Program_se.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql">
-      <Version>8.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational">
-      <Version>8.0.10</Version>
-    </PackageReference>
+    <!-- Usa SOLO uno de estos providers (elimina el otro si no aplica) -->
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
+    <!-- <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />  // si ya referencian el provider y EFCore base, suele no hacer falta -->
+    <!-- <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" /> -->
   </ItemGroup>
 </Project>
+  
