--- a/src/LexiCore.Application/LexiCore.Application.csproj
+++ b/src/LexiCore.Application/LexiCore.Application.csproj
@@ -1,34 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <!-- TargetFramework heredado via Directory.Build.props -->
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- Sin Version porque ya lo fija Directory.Packages.props -->
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt">
-      <Version>8.14.0</Version>
-    </PackageReference>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
     <PackageReference Include="BCrypt.Net-Next" />
-    <PackageReference Include="MimeKit">
-      <Version>4.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="MailKit">
-      <Version>4.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="QRCoder">
-      <Version>1.6.0</Version>
-    </PackageReference>
-    <PackageReference Include="QuestPDF">
-      <Version>2025.7.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore">
-      <Version>8.0.10</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational">
-      <Version>8.0.10</Version>
-    </PackageReference>
+    <PackageReference Include="MimeKit" />
+    <PackageReference Include="MailKit" />
+    <PackageReference Include="QRCoder" />
+    <PackageReference Include="QuestPDF" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
   </ItemGroup>
 
