--- a/src/LexiCore.Infrastructure/LexiCore.Infrastructure.csproj
+++ b/src/LexiCore.Infrastructure/LexiCore.Infrastructure.csproj
@@ -11,26 +11,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore">
-      <Version>8.0.10</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
-      <Version>8.0.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
-      <Version>8.0.10</Version>
     </PackageReference>
-    <!-- Si NO usas SQL Server, no agregues SqlServer. Deja Pomelo para MySQL: -->
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql">
-      <Version>8.0.2</Version>
-    </PackageReference>
+
+    <!-- Usa SOLO un provider -->
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
+    <!-- <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" /> -->
   </ItemGroup>
 
-  <!-- Por si en el futuro guardas backups dentro del proyecto -->
   <ItemGroup>
     <Compile Remove="Migrations__bak\**\*.cs" />
     <EmbeddedResource Remove="Migrations__bak\**\*" />
