--- a/tests/LexiCore.UnitTests/LexiCore.UnitTests.csproj
+++ b/tests/LexiCore.UnitTests/LexiCore.UnitTests.csproj
@@ -1,20 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <!-- TargetFramework heredado desde Directory.Build.props -->
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="coverlet.collector">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="xunit"  />
-    <PackageReference Include="xunit.runner.visualstudio" />
-    <!-- (Opcional) assertions más cómodas -->
-    <!-- <PackageReference Include="FluentAssertions" Version="6.12.0" /> -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <!-- (Opcional) <PackageReference Include="FluentAssertions" />  -> si lo agregas, ponlo también en Directory.Packages.props -->
   </ItemGroup>
 
   <ItemGroup>
@@ -22,10 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- ANTES: ..\ProyectoAnalisisLexico.Application\... -->
     <ProjectReference Include="..\..\src\LexiCore.Application\LexiCore.Application.csproj" />
     <ProjectReference Include="..\..\src\LexiCore.Infrastructure\LexiCore.Infrastructure.csproj" />
     <ProjectReference Include="..\..\src\LexiCore.Domain\LexiCore.Domain.csproj" />
   </ItemGroup>
-
 </Project>
