--- a/src/API/lexico/Lexico.API.csproj
+++ b/src/API/lexico/Lexico.API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.20" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.5" />
     <PackageReference Include="QuestPDF" Version="2024.7.0" />
   </ItemGroup>
