--- a/src/API/auth/appsettings.json
+++ b/src/API/auth/appsettings.json
@@ -1,7 +1,6 @@
 {
-  
   "ConnectionStrings": {
-    "Default": "Server=shinkansen.proxy.rlwy.net;Port=57961;Database=railway;User Id=root;Password=CNcRLbAuOsuNJyNiRbfgfULFcYJkOrEK;TreatTinyAsBoolean=true;SslMode=None;AllowPublicKeyRetrieval=True;ConnectionTimeout=15;"
+    "Default": "Server=66.70.255.24;Port=3306;Database=sistema_autenticacion;User Id=Grupo1;Password=ProyectoAut25;TreatTinyAsBoolean=true;AllowPublicKeyRetrieval=True;SslMode=None;ConnectionTimeout=15;Pooling=true;MinimumPoolSize=0;MaximumPoolSize=5;ConnectionIdleTimeout=30;ConnectionLifeTime=300;DefaultCommandTimeout=30;"
   },
   "Jwt": {
     "Issuer": "Seguridad.Api",
@@ -9,15 +8,6 @@
     "Key": "fwMBP+cyhxcvVXA4g/tAWF1CmFaSaFa+zWBZTlm2Cuk=",
     "AccessTokenMinutes": 60
   },
-  "Email": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "User": "casarr.n3xttechsolutions@gmail.com",
-    "Password": "edeh sssl rvon cnfq",
-    "From": "Seguridad Api <casarr.n3xttechsolutions@gmail.com>",
-    "UseStartTls": true
-  },
-
   "SendGrid": {
     "ApiKey": "",
     "From": "Seguridad API <casarr.n3xttechsolutions@gmail.com>"
@@ -31,13 +21,12 @@
   "ExternalApis": {
     "Biometria": {
       "BaseUrl": "http://www.server.daossystem.pro:3406/api/",
-      "TimeOutSeconds": 20, 
+      "TimeOutSeconds": 20,
       "UseNetCore8": true
-      
     }
   },
-    "FaceLogin": {
+  "FaceLogin": {
     "DistanceThreshold": 0.75
   },
-    "AllowedHosts": "*"
-  }
+  "AllowedHosts": "*"
+}
