--- a/src/Infrastructure/auth/Auth.Infrastructure.csproj
+++ b/src/Infrastructure/auth/Auth.Infrastructure.csproj
@@ -21,6 +21,6 @@
     <PackageReference Include="QuestPDF" Version="2025.7.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
-
+    <None Include="branding\**\*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 </Project>
